# azeo_pid

./: .gitignore  PROJECT_OVERVIEW.md  README.md  requirements.txt  setup.py  streamlit_app.py
pid_tuner/: __init__.py
pid_tuner/control/: __init__.py  pid.py
pid_tuner/identify/: __init__.py  intfit.py  segment.py  sopdtfit.py  stepfit.py
pid_tuner/models/: __init__.py  processes.py
pid_tuner/opc/: __init__.py  da_client.py  ua_client.py
pid_tuner_desktop/: app.py  create_app_icon.py  main.py  main_window.py  pyproject.toml  services.py
pid_tuner_desktop/adapters/: core_models.py  core_tuning.py
pid_tuner_desktop/models/: case_model.py  fit_result.py  signal_model.py
pid_tuner_desktop/packaging/postinstall/: README.txt
pid_tuner_desktop/qrc/: resources.qrc
pid_tuner_desktop/qss/: dark.qss
pid_tuner_desktop/runtime/: settings.json
pid_tuner_desktop/runtime/sessions/: pid_tuner.sqlite
pid_tuner_desktop/services/: identification_service.py  opc_da_service.py  opc_ua_service.py  simulation_service.py  storage_service.py  tuning_service.py
pid_tuner_desktop/viewmodels/: app_state.py  controller_vm.py  process_vm.py  simulation_vm.py  tuning_vm.py
pid_tuner_desktop/views/: console_panel.py  controller_panel.py  plot_panel.py  process_panel.py  project_browser.py  simulation_panel.py  tuning_panel.py
pid_tuner_desktop/widgets/: bounds_table.py  case_table.py  tag_picker.py  time_nav.py
streamlit_ui/: app.py  compat.py  enhanced_app.py  enhanced_styles.py  opc_integration.py  router.py  run.py  run_enhanced.py  state.py  styles.py  tune_compat.py
(+25 files in other folders)
